# wirefinder

./: .gitignore  Cargo.toml  README.md  deny.toml  lefthook.yml
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  daemon.rs  keys.rs  main.rs  server.rs  wgconf.rs  wireguard.rs
install/: postinst  wirefinder.desktop  wirefinderd.service
proto/: Cargo.toml
proto/src/: lib.rs
release/: package.sh
ui/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.css  App.module.css  App.tsx  api.ts  format.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/src/components/: CloseButton.module.css  CloseButton.tsx  CopyField.module.css  CopyField.tsx  Dashboard.module.css  Dashboard.tsx  Hero.tsx  ImportForm.tsx  Menu.module.css  Menu.tsx  Onboarding.module.css  Onboarding.tsx  ServerForm.tsx  ServerListItem.tsx  forms.module.css  icons.tsx  shared.module.css  useServerList.ts  useServerSearch.ts
ui/src/lib/: cx.ts
ui/src/styles/: global.css
